# wcfb2024autumn

./: CMakeLists.txt
src/: problema.cpp  problemb.cpp  problemc.cpp  problemd.cpp  probleme.cpp
