cmake_minimum_required(VERSION 3.30)
project(wcfb2024autumn)

set(CMAKE_CXX_STANDARD 23)

add_executable(${PROJECT_NAME}-a src/problema.cpp)
add_executable(${PROJECT_NAME}-b src/problemb.cpp)
add_executable(${PROJECT_NAME}-c src/problemc.cpp)
add_executable(${PROJECT_NAME}-d src/problemd.cpp)
add_executable(${PROJECT_NAME}-e src/probleme.cpp)